<resources>
    <string name="app_name">哎聊</string>
    <string name="userName">用户名：</string>
    <string name="passWord">  密码：</string>
    <string name="IpUserName">请输入用户名</string>
    <string name="IpPassWord">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="surePassWord">确认密码:</string>
    <string name="message_btn">消息</string>
    <string name="friend_btn">好友</string>
    <string name="setting_btn">设置</string>
</resources>
